--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,7 +10,7 @@ html, body{
     height: 100%;
     scroll-behavior: smooth;
     font-family: 'Roboto', sans-serif !important;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     box-sizing: border-box;
 }
 
